namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-digital-canteen-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-digital-canteen-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "digital-canteen-launchpad-tech-team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-digital-canteen-nonprod-alerts"
    cloud-platform.justice.gov.uk/application: "digital canteen"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-digital-canteen-api.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-digital-canteen-live"
